# gramforge

./: .gitignore  README.md  gen_english_samples.py  pyproject.toml  setup.cfg
agents/: python_grammar_design_lessons.md
benchmarks/: compare_generate_algorithms.py  generate_algorithm_comparison.md
docs/: grammar_design_lessons.md
src/gramforge/: __init__.py  codegen.py  codegen_utils.py  generate.py  generate_recursive.py  generate_sequential.py  generate_sequential_opt.py  grammar.py  python_code_metrics.py
src/gramforge/assets/: fol_nli_verbalization.py
src/gramforge/codegen_utils/: __init__.py
src/gramforge/grammars/: FOL.py  __init__.py  english.py  english_dev.py  mesopy.py  pygram.py  tinypy.py
src/gramforge/metrics/: __init__.py  python_code.py
src/gramforge/solver_utils/: tptp.py
src/unigram/: __init__.py  generate_choices.py
src/unigram/assets/: __init__.py  fol_nli_verbalization.py
src/unigram/grammars/: FOL.py  __init__.py
src/unigram/solver_utils/: __init__.py  tptp.py
tests/: test_cfg_parsability.py  test_constraint.py  test_default_realization_template.py  test_english_grammar_quality.py  test_fol_grammar_quality.py  test_mesopy_diagnostics.py  test_mesopy_quality.py  test_pygram_diagnostics.py  test_pygram_quality.py  test_template_digit_and_constraint.py  test_tinypy_python_syntax.py
