[tool.poetry]
name = "gramforge"
version = "1.0.0"
description = ""
authors = ["Damien Sileo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
anytree = "^2"
networkx = "*"
funcy = "*"
exrex = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
