[tool.poetry]
name = "gramforge"
version = "1.0.8"
description = "Efficient and multi-language generation from context free or sensitive grammars (CFG/CSG)"
authors = ["Damien Sileo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
anytree = "^2"
networkx = "*"
funcy = "*"
exrex = "*"
easydict = "*"
numpy = "*"
pandas = "*"
tqdm = "*"
psutil = "*"
faker = "*"
nltk = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
